--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -24,7 +24,7 @@ spec:
               name: vpro-db-data
           ports:
             - name: vprodb-port
-              containerport: 3386
+              containerPort: 3386
           env:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
