--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -29,6 +29,8 @@ spec:
              secretKeyRef:
                name: app-secret
                key: db-pass
+     nodeSelector:
+         project: vprofile
       volumes:
          - name: vpro-db-data
            persistentVolumeClaim:
