--- a/db-pv.yaml
+++ b/db-pv.yaml
@@ -1,16 +1,14 @@
-apiVersion: v1
 kind: PersistentVolume
+apiVersion: v1
 metadata:
   name: vpro-db-data
   labels:
-    type: local
+    type: amazonEBS
 spec:
-  storageClassName: manual
   capacity:
     storage: 3Gi
-  volumeMode: Filesystem
-  accessModes:
-    - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Recycle
-  hostPath:
-     path: "/mnt/data"
+accessModes:
+  - ReadWriteOnce
+awsElasticBlockStore:
+  volumeID: vol-068451097f4f7cf62
+  fsType: ext4
