--- a/db-pvc.yaml
+++ b/db-pvc.yaml
@@ -1,9 +1,9 @@
-apiVersion: v1
 kind: PersistentVolumeClaim
+apiVersion: v1
 metadata:
   name: vpro-db-data-claim
 spec:
-  storageClassName: manual
+  storageClassName: standard
   accessModes:
     - ReadWriteOnce
   resources:
