--- a/db-pv.yaml
+++ b/db-pv.yaml
@@ -1,16 +1,16 @@
----
 apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: vpro-db-data
+  labels:
+    type: local
 spec:
-  accessModes:
-  - ReadWriteOnce
-  awsElasticBlockStore:
-    fsType: ext4
-    volumeID: aws://us-east-1f/vol-068451097f4f7cf62
+  storageClassName: manual
   capacity:
     storage: 3Gi
-  persistentVolumeReclaimPolicy: Delete
-  storageClassName: standard
   volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Recycle
+  hostPath:
+     path: "/mnt/data"
