--- a/db-pvc.yaml
+++ b/db-pvc.yaml
@@ -1,13 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: vpro-db-data-pvc
+  name: vpro-db-data-claim
 spec:
+  storageClassName: manual
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   resources:
     requests:
       storage: 3Gi
-  storageClassName: standard
-  volumeMode: Filesystem
-  volumeName:  vpro-db-data
