Changes reclaim policy of db-pv

--- a/helm/vprofilecharts/templates/db-pv.yaml
+++ b/helm/vprofilecharts/templates/db-pv.yaml
@@ -11,6 +11,6 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Recycle
+  persistentVolumeReclaimPolicy: Delete
   hostPath:
      path: "/mnt/data"
