--- a/helm/vprofilecharts/templates/vproappdep.yaml
+++ b/helm/vprofilecharts/templates/vproappdep.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: vproapp
-        image: anmolkushwaha/vprofileapp:V1 
+        image: {{ .Values.appimage }}
         ports:
         - name: vproapp-port
           containerPort: 8080
