changes pv reclaim policy to retain

--- a/helm/vprofilecharts/templates/db-pv.yaml
+++ b/helm/vprofilecharts/templates/db-pv.yaml
@@ -11,6 +11,6 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Delete
+  persistentVolumeReclaimPolicy: Retain
   hostPath:
      path: "/mnt/data"
