--- a/db-pv.yaml
+++ b/db-pv.yaml
@@ -11,6 +11,6 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
+  persistentVolumeReclaimPolicy: Delete
   hostPath:
      path: "/mnt/data"
