--- a/db-pv.yaml
+++ b/db-pv.yaml
@@ -10,7 +10,7 @@ spec:
     storage: 3Gi
   volumeMode: Filesystem
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   persistentVolumeReclaimPolicy: Delete
   hostPath:
      path: "/mnt/data"
